# secrets-scanner

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  action.yml  build.rs  context7.json  install.ps1  install.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/skills/: secrets-scanner
.codex/skills/secrets-scanner/: REFERENCE.md  SKILL.md
.codex/skills/secrets-scanner/scripts/: install-git-hook.sh
.github/workflows/: ci.yml  publish.yml  release.yml  secrets-scan.yml
.hermes/: SOUL.md
.hermes/skills/secrets-scanner/: REFERENCE.md  SKILL.md
.hermes/skills/secrets-scanner/scripts/: install.sh  uninstall-git-hook.sh
.openclaw/skills/secrets-scanner/: REFERENCE.md  SKILL.md
assets/: kingfisher-rules-dups.json  kingfisher-rules.toml  kingfisher-rules.yml  local.toml  secrets-patterns-db-dups.json  secrets-patterns-db.toml  secrets-scanner-rules.toml  secrets-scanner.toml  sources.toml
benches/: scan.rs
bindings/: package-lock.json  package.json
bindings/node/: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.js  package-lock.json  package.json  public.d.ts  tsconfig.json
bindings/node-mcp/: README.md  package.json
bindings/node-mcp/src/: server.js
bindings/node-mcp/test/: server.test.js
bindings/node/lib/: config.js  errors.js  loader.js  mapping.js
bindings/node/src/: async_tasks.rs  config.rs  errors.rs  lib.rs  native_types.rs
bindings/node/test/: core.test.ts  types.ts
bindings/wasm/: .gitignore  Cargo.toml  FUTURE.md  README.md  package.json
bindings/wasm/src/: config.rs  error.rs  lib.rs  value.rs
bindings/wasm/tests/: api.test.cjs  deps.test.cjs
docs/: GITSECRETS_GITHUB.md  RELEASE.md  github_patterns_missing_from_gitleaks.csv  homebrew.md
docs/rulesets/: gitleaks.md  kingfisher.md  local.md  secrets-scanner.md  spdb.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_rule_parsing.rs  fuzz_scan_bytes.rs  fuzz_scan_content.rs
packaging/homebrew/Casks/: secrets-scanner.rb
plugins/secrets-scanner/: README.md
plugins/secrets-scanner/.claude-plugin/: plugin.json
plugins/secrets-scanner/.codex-plugin/: plugin.json
plugins/secrets-scanner/skills/secrets-scanner/: SKILL.md
plugins/secrets-scanner/skills/secrets-scanner/scripts/: install-git-hook.sh  uninstall.sh
scripts/: benchmark.sh  convert_csv_to_toml.py  convert_kingfisher_rules.py  find_duplicate_rules.py  gen_corpus.sh  generate_fixtures.py  generate_ruleset_docs.py  import_secrets_patterns_db.py  requirements-dev.txt  update_kingfisher_rules.py  update_rules.sh
src/: entropy.rs  error.rs  filters.rs  fingerprint.rs  format.rs  format_tests.rs  lib.rs  main.rs  safe_display.rs  scanner.rs
src/cli/: args.rs  args_tests.rs  completions.rs  mod.rs  rules.rs  scan.rs  scan_baseline.rs  scan_tests.rs  skill.rs
src/rules/: allowlist.rs  engine.rs  engine_builder.rs  manifest.rs  merge.rs  mod.rs  updater.rs  updater_tests.rs  validation.rs
src/rules/engine/: tests.rs
src/rules/merge/: error.rs  tests.rs
src/rules/updater/: cache.rs  error.rs
src/rules/validation/: config.rs  helpers.rs  tests.rs
src/scanner/: coverage.rs  matching.rs  matching_context.rs  matching_context_tests.rs  output.rs  redaction.rs  redaction_tests.rs  tests.rs  types.rs  walk.rs  walk_caps.rs  walk_caps_tests.rs  walk_file.rs  walk_git.rs  walk_history.rs  walk_history_parser.rs  walk_history_tests.rs  walk_staged.rs  walk_tests.rs
tests/: action_metadata.rs  hardening.rs  hook_scripts.rs  local_rules_fixtures.json  local_rules_validation.rs  proxy.rs  redaction_property.rs  scan_integration.rs
