[package]
name = "secrets_scanner"
version = "0.2.2"
edition = "2021"
build = "build.rs"
description = "A high-performance secrets scanner using Aho-Corasick, regex, and entropy gating"
license = "MIT"
repository = "https://github.com/whit3rabbit/secrets-scanner"
keywords = ["secrets", "security", "scanning", "gitleaks", "credentials"]
categories = ["security", "command-line-utilities"]
readme = "README.md"

[lib]
name = "secrets_scanner"
path = "src/lib.rs"

# ── features ──────────────────────────────────────────────────────────────────
# `updater` — enables the runtime rule-update mechanism (downloads via ureq).
# Build with:  cargo build --features updater
[features]
default = ["native"]

# `native` — enables filesystem, git, CLI, updater, and agent-skill installer
# integrations. WASM bindings disable default features and keep only in-memory
# scanning/redaction APIs.
native = [
    "dep:agent-config",
    "dep:clap",
    "dep:clap_complete",
    "dep:env_logger",
    "dep:libc",
    "dep:rayon",
    "dep:serde_json",
    "dep:walkdir",
]

updater = ["native", "dep:ureq"]

# `full-ruleset` — embed the opt-in rulesets (secrets-patterns-db, …) into the
# binary in addition to gitleaks+local. Pure build-time switch: build.rs reads it
# via the CARGO_FEATURE_FULL_RULESET env var. No extra dependencies.
full-ruleset = []

# `bench` — compile in the per-scan timing instrumentation used by the
# benchmarks (the `unkeyworded_scan_time_ns` accumulator on `Scanner`). Off by
# default so the lean release build never pays for `Instant::now()` per file.
bench = []

# ── dependencies ──────────────────────────────────────────────────────────────
[dependencies]
aho-corasick = "1.1"
regex        = "1.10"
memchr       = "2.7"        # SIMD byte search
rayon        = { version = "1.9", optional = true }        # parallel file scanning
walkdir      = { version = "2.4", optional = true }        # recursive directory walk
clap         = { version = "4.5", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }

# Rule-set parsing (gitleaks TOML format)
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"

# Logging facade
log          = "0.4"
env_logger   = { version = "0.11", optional = true }

# Typed error enum for library callers (distinguish IO vs invalid-rules, etc.)
thiserror    = "1"

# JSON serialization (baseline comparison)
serde_json   = { version = "1", optional = true }

# SHA-256 verification for cached updater rules.
sha2         = "0.10"
hex          = "0.4"

# Optional keyed (HMAC-SHA256) finding fingerprints (SECRETS_SCANNER_FINGERPRINT_KEY).
hmac         = "0.12"

# Unix no-follow opens for hostile repository scans.
libc         = { version = "0.2", optional = true }

# Optional: runtime rule updater (HTTP download)
ureq         = { version = "2", optional = true }

# Cross-runtime agent-skill installer (powers `install-skill`/`uninstall-skill`):
# owns per-harness paths, atomic writes, .bak backups, ownership ledger, and
# reversible uninstall. Effective MSRV floor is agent-config's (1.95).
agent-config = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "scan"
harness = false

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1

[build-dependencies]
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
regex        = "1.10"
log          = "0.4"

[[bin]]
name = "secrets-scanner"
path = "src/main.rs"
required-features = ["native"]
